--- a/style.css
+++ b/style.css
@@ -21,3 +21,11 @@ main {
   display: flex;
   flex-wrap: wrap;
 }
+
+#frontend,
+#backend,
+#fullStack {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
