--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
 .header {
   background-color: rgb(50, 167, 145);
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+main {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 5%;
 }
 
 .trybewarts-login {
   display: flex;
+}
+
+.trybewarts-login input {
+  width: 150px;
+  height: 70px;
+
+}
+
+.trybewarts-header-logo {
+  width: 5%;
 }
 
 main {
@@ -15,6 +44,14 @@ main {
   display: flex;
   width: 675px;
   flex-direction: column;
+}
+
+#evaluation-form div {
+  width: 50%;
+}
+
+#container-email input, #container-lastname input, #container-name input {
+  width: 90%;
 }
 
 #trybewarts-forms-logo {
@@ -35,4 +72,9 @@ main {
 #label-content {
   display: flex;
   flex-direction: column;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
