--- a/style.css
+++ b/style.css
@@ -4,16 +4,33 @@ body {
   background-color: white;
 }
 
+body {
+  background-color: rgb(233, 233, 233);
+  font-family: 'Volkhov', serif;
+}
+
 .header {
   background-color: rgb(50, 167, 145);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   padding: 0;
+  height: 70px;
 }
 
-h1 {
-  font-size: 60px;
+#trybewarts-header-title {
+  font-size: 50px;
+  color: white;
+}
+
+button {
+  height: 20px;
+  margin: 10px;
+  font-size: 15px;
+  background-color: rgb(164, 38, 214);
+  border: 1px solid rgb(164, 38, 214);
+  border-radius: 5px;
+  color: white;
 }
 
 main {
@@ -22,13 +39,28 @@ main {
   margin: 0 5%;
 }
 
+hr {
+  border: 1px solid rgb(50, 167, 145);
+  width: 90%;
+  margin: 5% 0;
+}
+
 .trybewarts-login {
   display: flex;
+  margin-right: 20px;
 }
 
 .trybewarts-login input {
-  width: 150px;
-  height: 70px;
+  width: 120px;
+  height: 25px;
+  margin: 5px;
+}
+
+input, select, textarea {
+  border: 2px solid rgb(164, 38, 214);
+  border-radius: 5px;
+  background-color: white;
+  font-size: large;
 }
 
 .trybewarts-header-logo {
@@ -49,11 +81,38 @@ main {
   width: 50%;
 }
 
-#container-email input,
-#container-lastname input,
-#container-name input {
-  width: 90%;
+#container-email input, #container-lastname input, #container-name input {
+  width: 150px;
+  height: 50px;
+  margin: 10px;
 }
+
+#house {
+  width: 120px;
+  height: 55px;
+  margin-top: 10px;
+}
+
+#gitnoria-house {
+  background-color:rgba(233,84,32,252);
+  color: rgba(51,51,51,255);
+}
+
+#reactpuff-house {
+  background-color:rgba(255,221,85,252);
+  color: rgba(42,127,255,255);
+}
+
+#corvinode-house {
+  background-color:rgba(95,141,210,252);
+  color: rgba(85,221,255,255);
+}
+
+#pytherina-house {
+  background-color:rgba(44,160,90,252);
+  color: rgba(85,34,0,255);
+}
+
 
 #trybewarts-forms-logo {
   height: 500px;
@@ -64,9 +123,7 @@ main {
   flex-wrap: wrap;
 }
 
-#frontend,
-#backend,
-#fullStack {
+#frontend, #backend, #fullStack {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -77,7 +134,25 @@ main {
   flex-direction: column;
 }
 
+.checbox-container {
+  display: inline;
+  width: 2000px;
+}
+
+.nowrap-flex {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+
+}
+
 footer {
   display: flex;
   justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  background-color: rgb(164, 38, 214);
+  height: 25%;
+  font-size: x-large;
+  padding: 15px;
 }
