--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: white;
-}
-
-body {
   background-color: rgb(233, 233, 233);
-  font-family: 'Volkhov', serif;
+  font-family: "Volkhov", serif;
 }
 
 .header {
@@ -50,12 +46,6 @@ hr {
   margin-right: 20px;
 }
 
-.trybewarts-login input {
-  width: 120px;
-  height: 25px;
-  margin: 5px;
-}
-
 input, select, textarea {
   border: 2px solid rgb(164, 38, 214);
   border-radius: 5px;
@@ -63,12 +53,14 @@ input, select, textarea {
   font-size: large;
 }
 
-.trybewarts-header-logo {
-  width: 5%;
+.trybewarts-login input {
+  width: 120px;
+  height: 25px;
+  margin: 5px;
 }
 
-main {
-  display: flex;
+.trybewarts-header-logo {
+  width: 5%;
 }
 
 #evaluation-form {
@@ -94,23 +86,23 @@ main {
 }
 
 #gitnoria-house {
-  background-color:rgba(233,84,32,252);
-  color: rgba(51,51,51,255);
+  background-color: rgba(233, 84, 32, 252);
+  color: rgba(51, 51, 51, 255);
 }
 
 #reactpuff-house {
-  background-color:rgba(255,221,85,252);
-  color: rgba(42,127,255,255);
+  background-color: rgba(255, 221, 85, 252);
+  color: rgba(42, 127, 255, 255);
 }
 
 #corvinode-house {
-  background-color:rgba(95,141,210,252);
-  color: rgba(85,221,255,255);
+  background-color: rgba(95, 141, 210, 252);
+  color: rgba(85, 221, 255, 255);
 }
 
 #pytherina-house {
-  background-color:rgba(44,160,90,252);
-  color: rgba(85,34,0,255);
+  background-color: rgba(44, 160, 90, 252);
+  color: rgba(85, 34, 0, 255);
 }
 
 
