--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(233, 233, 233);
-  font-family: "Volkhov", serif;
+  font-family: Volkhov, serif;
 }
 
 .header {
@@ -46,7 +46,7 @@ hr {
   margin-right: 20px;
 }
 
-input, select, textarea {
+input , select , textarea {
   border: 2px solid rgb(164, 38, 214);
   border-radius: 5px;
   background-color: white;
@@ -60,7 +60,7 @@ input, select, textarea {
 }
 
 .trybewarts-header-logo {
-  width: 5%;
+  width: 70px;
 }
 
 #evaluation-form {
@@ -73,7 +73,7 @@ input, select, textarea {
   width: 50%;
 }
 
-#container-email input, #container-lastname input, #container-name input {
+#container-email input , #container-lastname input , #container-name input {
   width: 150px;
   height: 50px;
   margin: 10px;
@@ -115,7 +115,7 @@ input, select, textarea {
   flex-wrap: wrap;
 }
 
-#frontend, #backend, #fullStack {
+#frontend , #backend , #fullStack {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
